; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_ptrace-utrace.c_ptrace_attach_task.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_ptrace-utrace.c_ptrace_attach_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.utrace_engine = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task_struct*, i32)* @ptrace_attach_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ptrace_attach_task(%struct.task_struct* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.utrace_engine*, align 8
  %7 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %9 = call %struct.utrace_engine* @ptrace_attach_engine(%struct.task_struct* %8)
  store %struct.utrace_engine* %9, %struct.utrace_engine** %6, align 8
  %10 = load %struct.utrace_engine*, %struct.utrace_engine** %6, align 8
  %11 = call i64 @IS_ERR(%struct.utrace_engine* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.utrace_engine*, %struct.utrace_engine** %6, align 8
  %15 = call i32 @PTR_ERR(%struct.utrace_engine* %14)
  store i32 %15, i32* %3, align 4
  br label %35

16:                                               ; preds = %2
  %17 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %18 = load %struct.utrace_engine*, %struct.utrace_engine** %6, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @ptrace_set_events(%struct.task_struct* %17, %struct.utrace_engine* %18, i32 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %16
  %24 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %25 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp ne i32 %26, 0
  %28 = xor i1 %27, true
  br label %29

29:                                               ; preds = %23, %16
  %30 = phi i1 [ false, %16 ], [ %28, %23 ]
  %31 = zext i1 %30 to i32
  %32 = call i32 @WARN_ON(i32 %31)
  %33 = load %struct.utrace_engine*, %struct.utrace_engine** %6, align 8
  %34 = call i32 @utrace_engine_put(%struct.utrace_engine* %33)
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %29, %13
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local %struct.utrace_engine* @ptrace_attach_engine(%struct.task_struct*) #1

declare dso_local i64 @IS_ERR(%struct.utrace_engine*) #1

declare dso_local i32 @PTR_ERR(%struct.utrace_engine*) #1

declare dso_local i32 @ptrace_set_events(%struct.task_struct*, %struct.utrace_engine*, i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @utrace_engine_put(%struct.utrace_engine*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
